[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postg-log-parser"
version = "1.0.0"
description = "A CLI tool for parsing and analyzing PostgreSQL log files"
readme = "readme.md"
authors = [
    { name = "PostgreSQL Log Parser Team" }
]
requires-python = ">=3.8.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
postg-parser = "postg.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/postg-log-parser"

[tool.hatch.build.targets.wheel]
packages = ["postg"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=postg --cov-report=term-missing --cov-report=html"

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "C0103"]
